--- a/style.css
+++ b/style.css
@@ -18,21 +18,69 @@ body{
     font-family: "Alata", sans-serif;
 }
 
-nav{
+
+
+
+.navbar{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 120px;
+
+}
+
+.mobile-nav-brand{
+    display: none;
+    cursor: pointer;
+
+}
+
+
+nav ul{
+    display: flex;
+    grid-template-columns: repeat(5, minmax(min-content, min-content) );
+    grid-gap: 32px;
 }
 
 
 
+nav ul li {
+    position: relative;
+}
+
+/*
 nav ul{
     display: flex;
     margin: 20px;
 
     
 }
+*/  
 
 
+
+nav ul li::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    width: 0;
+    height: 2px;
+    transform: translate(-);
+background: white;
+
+}
+
+nav ul li:hover::after{
+    width: 25px;
+}
+
+.nav-toggler{
+    cursor: pointer;
+    display: none;
+}
+
+/*
 .ull li{
     margin-bottom: 20px;
     padding-right: 40px;
@@ -40,21 +88,25 @@ nav ul{
     color: #fff;
 }
 
-
+*/
 ul{
     list-style-type: none;
+    
 }
 
 header{
     
-   
-    background: url('./images/desktop/image-hero.jpg');
-    height: 400px;
+    background: #0000 url(./images/desktop/image-hero.jpg)no-repeat center;
+   /* height: 400px;*/
+    background-size: cover;
+    background-blend-mode: multiply;
+     padding: 10px;
+     
 }
 
 
 .log{   
-    height: 35px;
+  
     margin: 20px;
         
     }
@@ -62,18 +114,18 @@ header{
   .class{
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin-bottom: 50px;
     
     
   }
 
   .class h1{
-    width: 390px;
-    font-size: 40px;
-    outline: solid hsl(0, 0%, 55%)
-     ;
+    width: 650px;
+    font-size: 4.7em;
+    border:3px solid white;
      color:#fff;
-     padding-left: 30px;
+    padding:38px;
+    margin-bottom:80px; 
   }
 
   .class1{
@@ -276,30 +328,92 @@ footer{
     margin-left: 80px;
 }
 
-
-
 @media (max-width: 414px){
 
+   
       header{
         height: 700px;
       
       background: url('./images/mobile/image-hero.jpg'); 
+
+      overflow: hidden;
       
       }  
 
 
      .log{
-        height: 15px;
+        height: 25px;
         margin: 30px;
-        
      }
 
+    
+     .mobile-nav-brand{
+        display: flex;
+        position: absolute;
+        right: 25px;
+        left: 25px;
+        top: 40px;
+        justify-content: space-between;
+        align-items: center;
+
+    }
+
+    .mobile-nav-brand img{
+        max-width: 145px;
+    }
+
+    
+
+    .navbar-nav{
+        position:fixed;
+        top:0;
+        left: -100%;
+        width: 100%;
+        height: 100vh;
+        background: rgb(75, 52, 52);
+        padding: 25px;
+        display: flex;
+        align-items: center;
+        z-index: 10;
+        transition: 0s;
+    }
+
+    .active{
+        left: 0;
+    }
+    .navbar-nav ul{
+        grid-gap: 25px;
+         display: flex;
+        flex-direction: column;
+        margin-bottom: 360px;
+    }
+
+    .navbar-nav ul li a{
+        color: #fff;
+        font-size: 20px;
+        font-weight: 900;
+          text-transform: uppercase;
+      }
+
+
+      .navbar-nav ul li::after{
+        display: none;
+      }
+
+      
+      .nav-toggler{
+        display: block;
+      }
+
      .class {
-        height: 250px;
+        font-size: 9px;
+        text-align: center;
+        padding:  15px;
         
-        
+
+         
      }
-     
+    
      .eat h1{
          width: 360px;
          
@@ -445,7 +559,5 @@ footer{
 }
 
 
-
-
-
 }
+
